--- a/index.html
+++ b/index.html
@@ -1,52 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pranav Vishwas - Portfolio</title>
-  <style>
-    body {
-      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-      color: #000;
-      background-color: #fff;
-      margin: 0;
-      padding: 0;
-    }
-    .container {
-      max-width: 800px;
-      margin: 0 auto;
-      padding: 20px;
-    }
-    h1, h2 {
-      color: #000;
-    }
-    p {
-      margin-bottom: 20px;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="container">
     <header>
-      <h1>MercifulWind922 Aka Pranav V</h1>
-      <nav>
-        <!-- You can add navigation links here if needed -->
-      </nav>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
     </header>
+
     <main>
-      <section id="bio">
-        <h2>Bio</h2>
-        <p>Passionate tech and car enthusiast</p>
-      </section>
-      <section id="portfolio">
-        <h2>Portfolio</h2>
-        <body>This is a website for my projects and contributions</body>
-        <!-- Add your portfolio items here -->
-      </section>
+        <section class="slide-in">
+            <h1>Welcome to My Portfolio</h1>
+            <p>Explore my projects, skills, and more!</p>
+        </section>
     </main>
+
     <footer>
-      <!-- Add footer content if needed -->
+        <p>&copy; 2024 My Portfolio. All rights reserved.</p>
     </footer>
-  </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
