--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
+    <title>My Projects</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -20,9 +20,16 @@
 
     <main>
         <section class="slide-in">
-            <h1>About Me</h1>
-            <p>I am a passionate developer with a focus on creating innovative solutions. I have experience in HTML, CSS, JavaScript, and more.</p>
-        </section>
+            <h2>My projects</h2>
+            <p>Explore my projects, skills, and more!</p>
+            <br> </br>
+
+            <ol>
+                <li><h3> Coffee </h3> </li>
+                <p>Tea</p>
+                <li>Milk</li>
+              </ol>
+        </section> 
     </main>
 
     <footer>
