--- a/projects.html
+++ b/projects.html
@@ -20,15 +20,87 @@
 
     <main>
         <section class="slide-in">
-            <h2>My projects</h2>
+            <h2>My Projects</h2>
             <p>Explore my projects, skills, and more!</p>
-            <br> </br>
+            <br>
 
             <ol>
-                <li><h3> Coffee </h3> </li>
-                <p>Tea</p>
-                <li>Milk</li>
-              </ol>
+                <li>
+                    <h3>Personal Website</h3>
+                    <p>Made using HTML, CSS from scratch and hosted on GitHub. Used for showcasing my portfolio and projects.</p>
+                    <a href="https://dpeiw.github.io/mywebsite" target="_blank">View Project</a>
+                </li>
+
+                <li>
+                    <h3>ICTS Job Shadow Website</h3>
+                    <p>Made using HTML, CSS from scratch and hosted on GitHub. Used for organizing and providing the Python notebooks and lecture notes during my time at ICTS.</p>
+                    <a href="https://dpeiw.github.io/ICTSjobshadow" target="_blank">View Project</a>
+                </li>
+
+                <li>
+                    <h3>IB Resources Website</h3>
+                    <p>Website compiling free IBDP and MYP resources to help fellow students in the curriculum.</p>
+                </li>
+
+                <li>
+                    <h3>MYP Personal Project</h3>
+                    <p>Conducted extensive research through articles, online sources, and user interviews. Recommended implementing battery swapping stations to improve EV charging speed and convenience. Created a 3D animation using Blender to illustrate the concept.</p>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/_UWvGUib3hU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <p>Gained skills in modeling, rigging, animating, and utilizing computer capabilities for rendering.</p>
+                </li>
+
+                <li>
+                    <h3>History of Internet Video</h3>
+                    <p>Video outlining the history of the internet for the Individuals and Societies subject.</p>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/df5x_Ast-00" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </li>
+
+                <li>
+                    <h3>SpaceX Physics</h3>
+                    <p>Website made in 8th grade analyzing the launch of the SpaceX Falcon 9 rocket.</p>
+                    <a href="https://15sb0019-pranav.wixsite.com/final-exam-portfolio/physics" target="_blank">View Project</a>
+                </li>
+
+                <li>
+                    <h3>Refurbishing Old Laptops</h3>
+                    <p>Upgrading old laptops, such as replacing the HDD with a solid-state drive (SSD) to improve performance. Repurposed the drive from a broken laptop as external storage.</p>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/BwG_wnAhens" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </li>
+
+                <li>
+                    <h3>Lego Mindstorms Cleaning Robot</h3>
+                    <p>Built and programmed a sweeping robot during COVID-19 lockdown using Lego Mindstorms.</p>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/n8SYmI2FfnU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </li>
+
+                <li>
+                    <h3>Paper Plane Launcher</h3>
+                    <p>Used motors and other components to build a paper plane launcher to accompany a physics activity in school.</p>
+                </li>
+
+                <li>
+                    <h3>DIY Racing Wheel</h3>
+                    <p>Built a steering wheel out of cardboard and two discarded mice to control racing games. Used AutoHotkey to experiment with control scripts.</p>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/oyd8RLmHzEg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </li>
+
+                <li>
+                    <h3>DIY Ultralight Mouse</h3>
+                    <p>Used parts from an old wireless mouse and gave it a new shell, prototyped using Blender and crafted using foam board.</p>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/JBzLMjJY-K0" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </li>
+
+                <li>
+                    <h3>MYP Design Projects</h3>
+                    <ul>
+                        <li>MYP 4: App that helps users acclimatize with the cultures of foreign countries. 
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/JywXRGzsQTU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </li>
+                        <li>MYP 5: Prototype of a braille keyboard with built-in display to aid the visually impaired. Mechanism reads the content of text box and makes it possible to feel the pattern. (Link)</li>
+                        <li>MYP 5: Physical prototype of a gym proposed for the school to aid students in improving physical fitness. (Link)</li>
+                    </ul>
+                </li>
+            </ol>
         </section> 
     </main>
 
