--- a/about.html
+++ b/about.html
@@ -21,7 +21,14 @@
     <main>
         <section class="slide-in">
             <h1>About Me</h1>
-            <p>I am a passionate developer with a focus on creating innovative solutions. I have experience in HTML, CSS, JavaScript, and more.</p>
+            <br> </br>
+            <p>
+            I am a high school student who is passionate about computers, engineering, and technology. 
+            I have experience designing and creating projects and collaborating with others. 
+            In my free time, I enjoy recommending, refurbishing tech, tinkering with Mindstorms, and taking up other fun projects. 
+            I am particularly interested in electrical and computer engineering and plan to pursue a career in this field. 
+            I am dedicated to endurance cycling and fitness, always looking for new challenges and ways to stay active.
+            </p>
         </section>
     </main>
 
