--- a/contact.html
+++ b/contact.html
@@ -20,8 +20,10 @@
 
     <main>
         <section class="slide-in">
-            <h1>About Me</h1>
-            <p>I am a passionate developer with a focus on creating innovative solutions. I have experience in HTML, CSS, JavaScript, and more.</p>
+            <h1>Contact me</h1>
+            <br> </br>
+            <p> Email:pranav.vishwas@proton.me</p>
+            <p> </p>
         </section>
     </main>
 
