--- a/projects.html
+++ b/projects.html
@@ -96,8 +96,16 @@
                         <li>MYP 4: App that helps users acclimatize with the cultures of foreign countries. 
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/JywXRGzsQTU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </li>
-                        <li>MYP 5: Prototype of a braille keyboard with built-in display to aid the visually impaired. Mechanism reads the content of text box and makes it possible to feel the pattern. (Link)</li>
-                        <li>MYP 5: Physical prototype of a gym proposed for the school to aid students in improving physical fitness. (Link)</li>
+                        <li>
+                            <h3>MYP 5: Prototype of a Braille Keyboard</h3>
+                            <p>Prototype of a braille keyboard with a built-in display to aid the visually impaired. The mechanism reads the content of a text box and makes it possible to feel the pattern.</p>
+                            <img src="sample.png" alt="Braille Keyboard Prototype" width="300" height="200">
+                        </li>
+                        <li>
+                            <h3>MYP 5: Physical Gym Prototype</h3>
+                            <p>Physical prototype of a gym proposed for the school to aid students in improving physical fitness.</p>
+                            <img src="sample.png" alt="Gym Prototype" width="300" height="200">
+                        </li>
                     </ul>
                 </li>
             </ol>
