--- a/about.html
+++ b/about.html
@@ -23,12 +23,18 @@
             <h1>About Me</h1>
             <br> </br>
             <p>
-            I am a high school student who is passionate about computers, engineering, and technology. 
+            My name is Pranav and I am a high school student who is passionate about computers, engineering, and technology. 
             I have experience designing and creating projects and collaborating with others. 
             In my free time, I enjoy recommending, refurbishing tech, tinkering with Mindstorms, and taking up other fun projects. 
             I am particularly interested in electrical and computer engineering and plan to pursue a career in this field. 
             I am dedicated to endurance cycling and fitness, always looking for new challenges and ways to stay active.
             </p>
+
+            <br> </br>
+            <p>
+                Check out my <a href="https://www.youtube.com/@DPEIW/" target="_blank">YouTube channel</a> where I share my projects and creations!
+            </p>
+
         </section>
     </main>
 
