--- a/projects.html
+++ b/projects.html
@@ -40,6 +40,7 @@
                 <li>
                     <h3>IB Resources Website</h3>
                     <p>Website compiling free IBDP and MYP resources to help fellow students in the curriculum.</p>
+                    <a href="https://sites.google.com/view/ib-all-resources/home" target="_blank">View Project</a>
                 </li>
 
                 <li>
