--- a/projects.html
+++ b/projects.html
@@ -105,7 +105,8 @@
                         <li>
                             <h3>MYP 5: Physical Gym Prototype</h3>
                             <p>Physical prototype of a gym proposed for the school to aid students in improving physical fitness.</p>
-                            <img src="sample.png" alt="Gym Prototype" width="300" height="200">
+                            <img src="IMG-8535.jpg" alt="Gym Prototype" width="360" height="250">
+                            <img src="IMG-8536.jpg" alt="Gym Prototype" width="360" height="250">
                         </li>
                     </ul>
                 </li>
