--- a/projects.html
+++ b/projects.html
@@ -99,12 +99,16 @@
                         </li>
                         <li>
                             <h3>MYP 5: Prototype of a Braille Keyboard</h3>
-                            <p>Prototype of a braille keyboard with a built-in display to aid the visually impaired. The mechanism reads the content of a text box and makes it possible to feel the pattern.</p>
-                            <img src="sample.png" alt="Braille Keyboard Prototype" width="300" height="200">
+                            <p>Prototype of a braille keyboard with a built-in display to aid the visually impaired. 
+                                The mechanism reads the content of a text box and makes it possible to feel the pattern. Prototype modeled in Blender and mechanism made using lego</p>
+                            <br> </br>
+                            <img src="braillekeyboardblender.png" alt="Braille Keyboard Prototype"  width="360" height="250">
+                            <img src="braileekeyboardlego.jpg" alt="Gym Prototype"  width="360" height="250">
                         </li>
                         <li>
                             <h3>MYP 5: Physical Gym Prototype</h3>
                             <p>Physical prototype of a gym proposed for the school to aid students in improving physical fitness.</p>
+                            <br> </br>
                             <img src="IMG-8535.jpg" alt="Gym Prototype" width="360" height="250">
                             <img src="IMG-8536.jpg" alt="Gym Prototype" width="360" height="250">
                         </li>
