--- a/projects.html
+++ b/projects.html
@@ -36,7 +36,11 @@
                     <p>Made using HTML, CSS from scratch and hosted on GitHub. Used for organizing and providing the Python notebooks and lecture notes during my time at ICTS.</p>
                     <a href="https://dpeiw.github.io/ICTSjobshadow" target="_blank">View Project</a>
                 </li>
-
+                <li> 
+                    <h3>Eunoia Magazine Website</h3>
+                    <p>Website made using HTML, CSS, and JavaScript for the Eunoia Magazine, which I have led since 2021. Used for displaying the latest editions magazine.</p>
+                    <a href="https://eunoiabyowis.github.io/magazines/" target="_blank">View Project</a>
+                </li>
                 <li>
                     <h3>IB Resources Website</h3>
                     <p>Website compiling free IBDP and MYP resources to help fellow students in the curriculum.</p>
