--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 
     <main>
         <section class="slide-in">
-            <h1>Welcome to My Portfolio</h1>
-            <p>Explore my projects, skills, and more!</p>
+            <h1>Welcome to My Portfolio!</h1>
+            <br></br>
+            <p>This is a website that showcases my projects and abilities. Check out the Projects page to see what I've been working on, or the About page to learn more about me!</p>
         </section>
     </main>
 
