--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
     <main>
         <section class="slide-in">
             <h2>My Projects</h2>
-            <p>Explore my projects, skills, and more!</p>
+            <p>Here are my notable projects</p>
             <br>
 
             <ol>
